Fixed vertical-align for sub and sup

--- a/RichTextEditorAndroid/src/main/assets/normalize.css
+++ b/RichTextEditorAndroid/src/main/assets/normalize.css
@@ -162,7 +162,6 @@ sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
-  vertical-align: baseline;
 }
 
 sup {
